--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "acomerci",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://acomerci.github.io/",
+  "homepage": "https://alexiscomerci.github.io/",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
