--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "npm run build && gh-pages -b master -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
