--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -2,15 +2,15 @@
   {
     "title": "Valija digital",
     "description": {
-      "es": "Una app para mandar documentos.",
-      "en": "An app to send documents."
+      "es": "Es una aplicación web para enviar documentación de trámites entre sectores de la empresa.",
+      "en": "It's a webapp to send documentation of administrative procedures between company sectors."
     },
-    "work": { "es": ["El trabajo de Marco"], "en": ["Marco's work"] },
+    "work": { "es": ["El trabajo de Marco."], "en": ["Marco's work."] },
     "technologies": {
       "be": [
         { "id": "java", "version": "8", "important": true },
         { "id": "spring_mvc", "version": "4.3", "important": true },
-        { "id": "oracle", "version": "10.2", "important": true },
+        { "id": "oracle", "version": "TBD", "important": true },
         { "name": "Spring Security", "version": "4.1" },
         { "name": "Log4j", "version": "1.2" },
         { "name": "Jackson", "version": "1.9" }
@@ -25,6 +25,29 @@
         { "name": "File Saver", "version": "1.1" },
         { "name": "Sweet Alert 2", "version": "5.3" },
         { "name": "Font Awesome", "version": "4.7" }
+      ]
+    }
+  },
+  {
+    "title": "Pagos en sucursal",
+    "description": {
+      "es": "TBD",
+      "en": "TBD"
+    },
+    "work": { "es": ["TBD"], "en": ["TBD"] },
+    "technologies": {
+      "be": [
+        { "id": "java", "version": "8", "important": true },
+        { "id": "spring_mvc", "version": "4.3", "important": true },
+        { "id": "oracle", "version": "TBD", "important": true },
+        { "id": "hibernate", "version": "4.2", "important": true },
+        { "id": "maven", "version": "3.2", "important": true },
+        { "name": "Log4j", "version": "1.2" },
+        { "name": "Jackson", "version": "2.5" }
+      ],
+      "fe": [
+        { "id": "angular", "version": "5.2", "important": true },
+        { "id": "primeng", "version": "5.2", "important": true }
       ]
     }
   }
