--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.6.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-localization": "^1.0.15",
     "react-scripts": "4.0.1",
