--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-localization": "^1.0.15",
+    "react-parallax": "^3.1.2",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
     "web-vitals": "^0.2.4"
